samples/_failures_safe/1761319700_0a9a35_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e1009ec7.c: In function ‘main’:
./samples/SAFE/__tmp_e1009ec7.c:147:17: error: expected expression at end of input
  147 |                 if (a.rows == 0 || b.rows ==
      |                 ^~
./samples/SAFE/__tmp_e1009ec7.c:147:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e1009ec7.c:147:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e1009ec7.c:147:17: error: expected declaration or statement at end of input
